--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,241 +1,5 @@
-/* Mixins */
-@mixin arrowAnimation{
-  .fa-long-arrow-alt-right{
-    font-size: .9rem;
-    width: 1rem;
-    transition: all .3s ease-in-out;
-  }
-  &:hover .fa-long-arrow-alt-right{
-    padding-left: .5rem;
-  }
-}
-@mixin cardAnimation{
-  position: absolute;
-  content: '';
-  background: url("https://github.githubassets.com/images/modules/site/patterns/dots-small.svg");
-  width: 18rem;
-  height: 18rem;
-  transition: opacity .4s,transform .4s;
-  opacity:0;
-  z-index: -1;
-}
-/* End Mixins */
-
-
-/* Global*/
-*,*:before,*:after{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-:root{
-  --dark-blue:#24292e;
-  --white:#ffffff;
-  --black:#000000;
-  --blue:#0000ff;
-  --science-blue:#0366D6;
-  --azure-radiance:#1074e7;
-  --congress-blue:#044289;
-  --fuchsia-blue:#6f42c1;
-  --gray:#808080;
-  --gray-2:#586069;
-  --outer-space:rgb(43,49,55);
-  --athens-gray:rgb(225, 228, 232);
-  --athens-gray-2:#FAFBFC;
-  --athens-gray-3:#e1e4e8 ;
-  --pink:#ffc0cb;
-  --red:#ff0000;
-  --yellow:#ffff00;
-  --endeavour:#0065a9;
-  --lochmara:#007acc;
-  --egg-blue:#00cfc8;
-  --daintree: #022531;
-  --sapphire:#040d21;
-  --british-racing-green:#041027;
-  --black-pearl:#051127;
-  --cinder:#1e2327;
-  --dodger-blue:#1f9cf0;
-  --shark:#23292f;
-  --shark-2:#1b1f23;
-  --mine-shaft:#303030;
-  --emerald:#34d058;
-  --chambray:#364e98;
-  --fiord:#424d65;
-  --river-bed:#465061;
-  --grape:#4a154b;
-  --fern:#5fb57d;
-  --malibu:#79b8ff;
-  --bali-hai:#8392ad;
-  --regent-gray:#959da5;
-  --solitude:#dadfe9;
-  --dark-pink:#ea4aaa;
-  --burnt-sienna:#ed4e50;
-  --bright-sun:#ffd33d;
-  --mischka:#d0d6df;
-  --black-squeeze:#eff9f9;
-  --concrete:#f2f2f2;
-  --twilight-blue:#f0ffff;
-  --coral:#ff7f50;
-  --japanese-laurel:#008000;
-  --web-orange:#ffa500;
-  --christine:#f66a0a;
-  --fresh-eggplant:#800080;
-  --dark-grayish-blue: rgb(43, 49, 55);
-  --aqua-haze:#f6f8fa;
-  --pale-sky:#6A737D;
-  --iron:#D1D5DA;
-  --chateau-green:#2ebc4f;
-  --eucalyptus:#28a745;
-  --forest-green:#22863a;
-  --brown:#a04100;
-  --bs-lg: 0 8px 24px rgba(149,157,165,.2);
-  --bs-xlg:0 12px 48px rgba(149,157,165,.3);
-
-}
-html{
-  font-size: 10px;
-}
-body{
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-  line-height: 1.5;
-  color: var(--dark-blue);
-  background-color: var(--white);
-}
-ul{
-  list-style: none;
-}
-a{
-  color:var(--science-blue);
-  text-decoration: none;
-  cursor: pointer;
-}
-img{
-  width: 100%;
-  max-width: 100%;
-}
-.container{
-  width: 100%;
-  max-width: 128rem;
-  margin: 0 auto;
-  padding: 0 4rem;
-}
-
-section {
-  padding: 5rem 0;
-}
-.ff-inter{
-  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
-}
-.ff-mono{
-  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace!important;
-}
-.btn-outline-blue{
-  border-radius: .6rem;
-  transition: .2s;
-  padding: 1.6rem 2.4rem;
-  font-size: 1.4rem;
-  font-weight: 500;
-  margin-top: 2.5rem;
-  border:1px solid rgba(16,116,231,.5);
-  @include arrowAnimation();
-  &:hover{
-    color:var(--science-blue);
-    border-color:var(--azure-radiance);
-  }
-}
-.section-head{
-  max-width: 70rem;
-  margin:0 auto;
-  text-align: center;
-}
-.sm-description{
-  color: var(--gray-2);
-  font-size: 1.6rem;
-  font-weight: 400;
-}
-.section-title{
-  color: var(--dark-blue);
-  font-size: 4.8rem;
-  font-weight: 500;
-}
-.section-description{
-  color: var(--gray-2);
-  font-size: 2rem;
-  font-weight: 400;
-}
-.cards{
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 2.5rem;
-  justify-content: center;
-}
-.card{
-  flex-basis: 22.5%;
-  min-width: 25rem;
-  background-color: var(--white);
-  box-shadow: 0 2px 4px rgba(27,31,35,.15);
-  border-radius: .6rem;
-  padding: 1.6rem;
-  @include arrowAnimation();
-  &:hover{
-    .card-link-effect{
-      opacity: 1;
-      transform: translate3d(.5rem,-.5rem,0) scale(.95);
-    }
-  }
-}
-.card-header{
-  position: relative;
-  max-height: 20rem;
-  overflow: hidden;
-  img{
-    border-radius: .6rem;
-  }
-}
-.card-link-effect{
-  position: absolute;
-  top: 1.5rem;
-  right:1.5rem ;
-  background-color: var(--azure-radiance);
-  border-radius: .6rem;
-  padding:1rem 2rem;
-  transition: opacity .4s,transform .4s;
-  opacity: 0;
-}
-.square{
-  border:2px solid var(--dark-blue);
-  padding:.45rem .9rem;
-  i{
-    font-size: 1.2rem;
-    transform: rotate(45deg);
-    color: var(--white);
-  }
-}
-.card-body{
-  margin:1rem 0 1.5rem;
-  h1{
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: var(--dark-blue);
-  }
-  p{
-    color: var(--gray-2);
-    font-size: 1.2rem;
-  }
-}
-.card-footer{
-  border-top: 1px solid var(--athens-gray-3);
-  padding-top: 1.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--azure-radiance);
-  font-size: 1.4rem;
-}
-/* End Global */
-
-
-
+@import "mixins";
+@import "global";
 
 
 /*Header */
@@ -1261,3 +1025,6 @@ font-size: 1.6rem;
   }
 }
 /* End Footer  */
+
+
+@import "mediaQueries";
